--- a/index.css
+++ b/index.css
@@ -12,6 +12,8 @@ body {
 .container {
     display: flex;
     justify-content: space-around;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 h3 {
